syntax = "proto3";

package topic;

import "google/api/annotations.proto";

service Topic {
  rpc Create (CreateRequest) returns (CreateReply) {
    option (google.api.http) = {
      post: "/v1/topic",
      body: "*"
    };
  };
  rpc List (ListRequest) returns (ListReply) {
    option (google.api.http) = {
      get: "/v1/topic"
    };
  };
  rpc Delete (DeleteRequest) returns (DeleteReply) {
    option (google.api.http) = {
      delete: "/v1/topic/{id}"
    };
  };
}

message TopicEntry {
  string id = 1;
  string name = 2;
}

message CreateRequest {
  TopicEntry topic = 1;
}

message CreateReply {
  TopicEntry topic = 1;
}

message ListRequest {
}

message ListReply {
  repeated TopicEntry topics = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteReply {
  TopicEntry topic = 1;
}
